Set up client app and first microservice
Signed-off-by: Ilya Kushlianski <ikushlianski@Ilyas-MacBook-Pro.local>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@app/auth-z": [
-        "libs/auth-z/src"
-      ],
-      "@app/auth-z/*": [
-        "libs/auth-z/src/*"
-      ]
-    }
+    "paths": {}
   }
 }
