--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nova-platform-api",
+  "name": "users",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -11,19 +11,21 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/nova-platform-api/main",
+    "start:prod": "node dist/apps/users/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/nova-platform-api/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/users/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -33,7 +35,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
@@ -66,11 +68,7 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/",
-      "<rootDir>/libs/"
-    ],
-    "moduleNameMapper": {
-      "^@app/auth-z(|/.*)$": "<rootDir>/libs/auth-z/src/$1"
-    }
+      "<rootDir>/apps/"
+    ]
   }
 }
