--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "users",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Ilya Kushlianski",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
+    "prisma": "^5.16.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
