Basic google authentication for microservices
Signed-off-by: Ilya Kushlianski <kushliansky@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,12 @@ CLIENT_APP_PORT=
 
 USER_SERVICE_HOST=
 USER_SERVICE_PORT=
+
+AUTH_SERVICE_HOST=
+AUTH_SERVICE_PORT=
+
+# Google auth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+JWT_SECRET=
