--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:22-alpine
 WORKDIR /usr/src/server
 
-ARG CLIENT_APP_PORT
+ARG AUTH_SERVICE_PORT
 ARG POSTGRES_PASSWORD
 
 # Set environment variables from ARGs
@@ -11,4 +11,4 @@ RUN npm install -g @nestjs/cli
 COPY package*.json ./
 RUN npm ci
 COPY . .
-EXPOSE ${CLIENT_APP_PORT}
+EXPOSE ${AUTH_SERVICE_PORT}
