--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,31 +7,33 @@ services:
       args:
         - CLIENT_APP_PORT=${CLIENT_APP_PORT}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - ENV_FILE=${ENV_FILE}
     env_file:
-      - .env
+      - ${ENV_FILE}
     volumes:
       - .:/usr/src/server
     ports:
       - "${CLIENT_APP_PORT}:${CLIENT_APP_PORT}"
-    command: nest start client-app --watch
+    command: npx nest start client-app --watch
     networks:
       - local
     depends_on:
       - database
   users:
     env_file:
-      - .env
+      - ${ENV_FILE}
     build:
       context: .
       dockerfile: apps/users/Dockerfile
       args:
         - USER_SERVICE_PORT=${USER_SERVICE_PORT}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - ENV_FILE=${ENV_FILE}
     ports:
       - "${USER_SERVICE_PORT}:${USER_SERVICE_PORT}"
     volumes:
       - .:/usr/src/server
-    command: nest start users --watch
+    command: npx nest start users --watch
     networks:
       - local
     depends_on:
@@ -39,10 +41,8 @@ services:
   database:
     restart: always
     image: postgres:16.3-alpine
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: nova-platform-api
+    env_file:
+      - ${ENV_FILE}
     healthcheck:
       test: "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"
       interval: 5s
