--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ DATABASE_URL=
 DATABASE_PASSWORD=
 
 # Service ports
-CLIENT_APP_HOST=
-CLIENT_APP_PORT=
+GATEWAY_HOST=
+GATEWAY_PORT=
 
 USER_SERVICE_HOST=
 USER_SERVICE_PORT=
