--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.9'
 services:
-  client-app:
+  gateway:
     build:
       context: .
-      dockerfile: apps/client-app/Dockerfile
+      dockerfile: apps/gateway/Dockerfile
       args:
-        - CLIENT_APP_PORT=${CLIENT_APP_PORT}
+        - GATEWAY_PORT=${GATEWAY_PORT}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         - ENV_FILE=${ENV_FILE}
     env_file:
@@ -13,8 +13,8 @@ services:
     volumes:
       - .:/usr/src/server
     ports:
-      - "${CLIENT_APP_PORT}:${CLIENT_APP_PORT}"
-    command: npx nest start client-app --watch
+      - "${GATEWAY_PORT}:${GATEWAY_PORT}"
+    command: npx nest start gateway --watch
     networks:
       - local
     depends_on:
