--- a/package.json
+++ b/package.json
@@ -69,6 +69,15 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
+  "overrides": {
+    "glob": "^9",
+    "rimraf": "^4",
+    "superagent": "^9",
+    "dependencies": {
+      "@humanwhocodes/object-schema": "npm:@eslint/object-schema",
+      "@humanwhocodes/config-array": "@eslint/config-array"
+    }
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
