--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "dev": "./start-docker.sh .env.development.local",
-    "dev:cleanup": "./cleanup.sh .env.development.local",
+    "dev:cleanup": "./cleanup-docker.sh .env.development.local",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
