--- a/.github/workflows/basic-checks.yml
+++ b/.github/workflows/basic-checks.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - main
+  push:
 
 jobs:
   test-and-build:
@@ -22,7 +23,6 @@ jobs:
         run: npm install
 
       - name: Run tests
-#        run: npm run test
         run: npm run test -- --passWithNoTests
 
       - name: Compilation check
