Change node to v22 as we go with custom instance and not vendor like Vercel
Signed-off-by: Ilya Kushlianski <kushliansky@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Ilya Kushlianski",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
