--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Environment
+
+# qa1, qa2, dev, prod. This is what you should check for when writing logic
 APP_ENV=
+# development, production. This is deployment-only and should not be checked for in logic
+NODE_ENV=
 
 DATABASE_URL=
 DATABASE_PASSWORD=
