.env.example updated
Signed-off-by: Makarov Sergey <sgmakgg@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,21 @@
+HOST=
+POSTGRES_PASSWORD=
+POSTGRES_USER=
+DATABASE_PORT=
+POSTGRES_DB=
+
 # Environment
-
-# qa1, qa2, dev, prod. This is what you should check for when writing logic
-APP_ENV=
-# development, production. This is deployment-only and should not be checked for in logic
-NODE_ENV=
-
-DATABASE_URL=
-DATABASE_PASSWORD=
+APP_ENV= # can also be qa1, qa2, prod, dev
+NODE_ENV= # can also be production
 
 # Service ports
+FRONTEND_URL=
+
 GATEWAY_HOST=
 GATEWAY_PORT=
 
 USER_SERVICE_HOST=
 USER_SERVICE_PORT=
-
-AUTH_SERVICE_HOST=
-AUTH_SERVICE_PORT=
 
 # Google auth
 GOOGLE_CLIENT_ID=
