Update .env.example, add APP_DOMAIN
Signed-off-by: Ilya Kushlianski <kushliansky@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 APP_ENV=
 # development, production. This is deployment-only and should not be checked for in logic
 NODE_ENV=
+APP_DOMAIN=
 
 DATABASE_URL=
 DATABASE_PASSWORD=
