--- a/.github/workflows/Swagger Deploy.yml
+++ b/.github/workflows/Swagger Deploy.yml
@@ -13,4 +13,4 @@ jobs:
 
       - name: Run Swagger UI container
         run: |
-          docker run -d -p 80:8080 -e SWAGGER_JSON=/foo/swagger.json -v ${{ github.workspace }}:/foo swaggerapi/swagger-ui
+          docker run -d -p 80:8080 -e SWAGGER_JSON=/foo/swagger.yml -v ${{ github.workspace }}:/foo swaggerapi/swagger-ui
