--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/users/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
+    "prisma:push": "dotenv -e .env.development.local -- prisma db push",
+    "prisma:seed": "dotenv -e .env.development.local -- prisma db seed",
+    "prisma:migrate": "dotenv -e .env.development.local -- npx prisma migrate deploy"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -36,6 +42,7 @@
     "@nestjs/swagger": "^7.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "express": "^4.19.2",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
@@ -49,6 +56,7 @@
     "@nestjs/cli": "^10.4.1",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.19.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
