SP-70: update migration scripts

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
-    "migration:create": "prisma migrate dev --create-only",
-    "migrate": "prisma migrate dev",
-    "migrate:prod": "prisma migrate deploy"
+    "migration:create": "dotenv -e .env.development.local -- prisma migrate dev --create-only",
+    "migrate:dev": "dotenv -e .env.development.local -- prisma migrate dev",
+    "migrate:prod": "dotenv -e .env -- prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -36,6 +36,7 @@
     "@prisma/client": "^5.16.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "express": "^4.19.2",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
