--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "dev": "./start-docker.sh .env.development.local",
+    "dev:bash": "./start-docker.sh .env.development.local",
     "dev:cleanup": "./cleanup-docker.sh .env.development.local",
     "start": "nest start",
     "start:dev": "nest start --watch",
