--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ DATABASE_PORT=
 POSTGRES_DB=
 
 # Environment
-APP_ENV= # can also be qa1, qa2, prod, dev
-NODE_ENV= # can also be development, production
+APP_ENV= 
+NODE_ENV= 
 
 # Service ports
 FRONTEND_URL=
