--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "dev:bash": "./start-docker.sh .env.development.local",
+    "dev": "./start-docker.sh .env.development.local",
     "dev:cleanup": "./cleanup-docker.sh .env.development.local",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -20,7 +20,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
-    "migrate:dev": "dotenv -e .env.development.local -- npx prisma migrate dev --name init"
+    "migration:create": "dotenv -e .env.development.local -- prisma migrate dev --create-only",
+    "migrate:dev": "dotenv -e .env.development.local -- npx prisma migrate dev --name init",
+    "migrate:prod": "dotenv -e .env -- prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.1",
@@ -67,7 +69,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.0",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
@@ -110,4 +112,3 @@
   },
   "packageManager": "pnpm@9.8.0"
 }
-
