--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
-    "migration:create": "dotenv -e .env.development.local -- prisma migrate dev --create-only",
-    "migrate:dev": "dotenv -e .env.development.local -- npx prisma migrate dev --name init",
-    "migrate:prod": "dotenv -e .env -- prisma migrate deploy"
+    "migrate:dev:push": "dotenv -e .env.development.local -- prisma db push",
+    "migrate:dev:pull": "dotenv -e .env.development.local -- prisma db pull",
+    "migrate:dev:seed": "dotenv -e .env.development.local -- prisma db seed",
+    "migrate:dev": "dotenv -e .env.development.local -- prisma migrate dev --name init"
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.1",
@@ -38,7 +42,6 @@
     "amqplib": "^0.10.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "dotenv-cli": "^7.4.2",
     "express": "^4.19.2",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
@@ -57,13 +60,14 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.2",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
