--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,9 @@ jobs:
             nest-cli.json
             package*.json
             tsconfig*.json
-
+      - name: ls -al
+        run: ls -al
+        
       - name: copy file via ssh 
         uses: appleboy/scp-action@v0.1.7
         with:
