--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,11 @@ jobs:
             package*.json
             tsconfig*.json
       - name: test
-        run: find / -name nova-platform-api.zip
+        uses: actions/download-artifact@v4
+        with:
+          name: nova-platform-api
+      - name: Display structure of downloaded files
+        run: ls -al
         
       - name: copy file via ssh 
         uses: appleboy/scp-action@v0.1.7
