--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: nova-platform-api
+          path: toupload
       - name: Display structure of downloaded files
-        run: ls -al
+        run: ls -al toupload
         
       - name: copy file via ssh 
         uses: appleboy/scp-action@v0.1.7
