--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,15 @@ jobs:
             nest-cli.json
             package*.json
             tsconfig*.json
-      - name: test
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: nova-platform-api
-          path: toupload
+          path: nova-platform-api
+      - name: zip all the files
+        run: (cd nova-platform-api;cd nova-platform-api; zip -r ../nova-platform-api.zip * zip -r ../nonova-platform-api.zip *)
       - name: Display structure of downloaded files
-        run: ls -al toupload
+        run: ls -al
         
       - name: copy file via ssh 
         uses: appleboy/scp-action@v0.1.7
