--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
-    "db:push-dev": "dotenv -e .env.development.local -- prisma db push",
-    "db:seed-dev": "dotenv -e .env.development.local -- prisma db seed",
     "migration:create": "dotenv -e .env.development.local -- prisma migrate dev --create-only",
     "migrate:dev": "dotenv -e .env.development.local -- prisma migrate dev",
-    "migrate:prod": "dotenv -e .env -- prisma migrate deploy"
+    "migrate:prod": "dotenv -e .env -- prisma migrate deploy",
+    "db:seed-dev": "dotenv -e .env.development.local -- prisma db seed"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
