--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
-    "migration:create": "dotenv -e .env.development.local -- prisma migrate dev --create-only",
-    "migrate:dev": "dotenv -e .env.development.local -- prisma migrate dev --name init",
-    "migrate:prod": "dotenv -e .env -- prisma migrate deploy"
+    "migration:create": "npx dotenv -e .env.development.local -- prisma migrate dev --create-only",
+    "migrate:dev": "npx dotenv -e .env.development.local -- prisma migrate dev --name init",
+    "migrate:prod": "npx dotenv -e .env -- prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.1",
