--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,9 +49,11 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "6500:${DATABASE_PORT}"
+      - "${DATABASE_PORT}:${DATABASE_PORT}"
     networks:
       - local
+    volumes:
+      - ./documentation/db-schema/ddl.sql:/docker-entrypoint-initdb.d/ddl.sql
 volumes:
   database:
     driver: local
