--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "6500:${DATABASE_PORT}"
+      - "${LOCAL_DATABASE_PORT}:${DATABASE_PORT}"
     networks:
       - local
     volumes:
