--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD=
 POSTGRES_USER=
 DATABASE_PORT=
 POSTGRES_DB=
+DATABASE_URL=
 
 # Environment
 APP_ENV= # can also be qa1, qa2, prod, dev
