Update .env.example, do not init DB data with initdb.d
Signed-off-by: Ilya Kushlianski <kushliansky@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,15 @@ DATABASE_URL=
 # Environment
 APP_ENV= # can also be qa1, qa2, prod, dev
 NODE_ENV= # can also be development, production
+APP_DOMAIN= # sth like novaenglish.by
 
 # Service ports
 FRONTEND_URL=
 
-GATEWAY_HOST=
+GATEWAY_HOST=#should be the same as gateway service name in docker compose (`gateway`)
 GATEWAY_PORT=
 
-USER_SERVICE_HOST=
+USER_SERVICE_HOST=#should be the same as user service name in docker compose (`users`)
 USER_SERVICE_PORT=
 
 # Google auth
