add dependsOn for pgadmin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,8 @@ services:
       - "${PGADMIN_LISTEN_PORT}:${PGADMIN_LISTEN_PORT}"
     networks:
       - local
+    depends_on:
+      - database
 volumes:
   database:
     driver: local
