--- a/.github/workflows/build-and-deploy-to-qa1.yml
+++ b/.github/workflows/build-and-deploy-to-qa1.yml
@@ -27,26 +27,28 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Archive production artifacts nova-platform-api
-        uses: actions/upload-artifact@v4
-        with:
-          name: nova-platform-api
-          path: |
-            apps
-            prisma
-            nest-cli.json
-            package*.json
-            tsconfig*.json
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: nova-platform-api
-          path: nova-platform-api
-      - name: zip all the files
-        working-directory: ./nova-platform-api
-        run: zip -r ../nova-platform-api.zip *
-      # - name: Display structure of downloaded files
-      #   run: ls -al
+      # - name: Archive production artifacts nova-platform-api
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: nova-platform-api
+      #     path: |
+      #       apps
+      #       prisma
+      #       nest-cli.json
+      #       package*.json
+      #       tsconfig*.json
+      # - name: Download artifact
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: nova-platform-api
+      #     path: nova-platform-api
+      # - name: zip all the files
+      #   working-directory: ./nova-platform-api
+      #   run: zip -r ../nova-platform-api.zip *
+      - name: zip nova-platform-api
+        run: |
+          zip -r -y nova-platform-api.zip apps/ prisma/ nest-cli.json package*.json tsconfig*.json
+
       - name: Update build hash in values.yaml    
         uses: fjogeleit/yaml-update-action@main
         with:
@@ -54,7 +56,8 @@ jobs:
           propertyPath: 'build_hash'
           value: ${{ github.sha }}
           commitChange: true
-          branch: ${{ github.head_ref || github.ref_name }} 
+          # branch: ${{ github.head_ref || github.ref_name }} 
+          branch: stage-qa1
           message: "Update build number"
           token: ${{ secrets.GITHUB_TOKEN }}
           
