Finalize registration flow, improve docker and migration process
Signed-off-by: Ilya Kushlianski <kushliansky@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ DATABASE_PORT=
 POSTGRES_DB=
 
 # Environment
-APP_ENV= 
-NODE_ENV= 
+APP_ENV=
+NODE_ENV=
 
 # Service ports
 FRONTEND_URL=
@@ -14,8 +14,8 @@ FRONTEND_URL=
 GATEWAY_HOST=
 GATEWAY_PORT=
 
-USER_SERVICE_HOST=
-USER_SERVICE_PORT=
+USERS_SERVICE_HOST=
+USERS_SERVICE_PORT=
 
 # Google auth
 GOOGLE_CLIENT_ID=
