--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,9 @@ lerna-debug.log*
 # dotenv environment variable files
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production
 .env.local
+.env.production
 .env
 
 # temp directory
