--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.9'
 services:
   gateway:
+    container_name: gateway
     build:
+      target: ${NODE_ENV}
       context: .
       dockerfile: apps/gateway/Dockerfile
       args:
@@ -14,23 +16,25 @@ services:
       - .:/usr/src/server
     ports:
       - "${GATEWAY_PORT}:${GATEWAY_PORT}"
-    command: npx nest start gateway --watch
+#    command: npx nest start gateway --watch
     networks:
       - local
     depends_on:
       - database
   users:
+    container_name: users
     env_file:
       - ${ENV_FILE}
     build:
+      target: ${NODE_ENV}
       context: .
       dockerfile: apps/users/Dockerfile
       args:
-        - USER_SERVICE_PORT=${USER_SERVICE_PORT}
+        - USERS_SERVICE_PORT=${USERS_SERVICE_PORT}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         - ENV_FILE=${ENV_FILE}
     ports:
-      - "${USER_SERVICE_PORT}:${USER_SERVICE_PORT}"
+      - "${USERS_SERVICE_PORT}:${USERS_SERVICE_PORT}"
     volumes:
       - .:/usr/src/server
     command: npx nest start users --watch
@@ -39,6 +43,7 @@ services:
     depends_on:
       - database
   database:
+    container_name: database
     restart: always
     image: postgres:16.3-alpine
     env_file:
@@ -49,11 +54,9 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "${LOCAL_DATABASE_PORT}:${DATABASE_PORT}"
+      - "${DATABASE_PORT}:${DATABASE_PORT}"
     networks:
       - local
-    volumes:
-      - ./documentation/db-schema/ddl.sql:/docker-entrypoint-initdb.d/ddl.sql
 volumes:
   database:
     driver: local
