--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "dev": "./start-docker.sh .env.development.local",
     "dev:cleanup": "./cleanup-docker.sh .env.development.local",
+    "dev:migrate": "npm run migrate:dev && nest start gateway --watch",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/users/main",
+    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
-    "migration:create": "dotenv -e .env.development.local -- prisma migrate dev --create-only",
+    "migrations:generate": "./generate-migrations.sh",
     "migrate:dev": "dotenv -e .env.development.local -- prisma migrate dev --name init",
     "migrate:prod": "dotenv -e .env -- prisma migrate deploy"
   },
@@ -33,7 +35,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "cookie-parser": "^1.4.6",
@@ -69,7 +71,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "prisma": "^5.19.0",
+    "prisma": "^5.19.1",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
