--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -10,10 +10,14 @@ steps:
     version: '22.x'
   displayName: 'Install Node.js'
 
-- script: |
+- pwsh: |
     npm install
   displayName: 'npm install'
 
-- script: |
+- pwsh: |
     npm run build
   displayName: 'npm build'
+
+- pwsh: |
+    docker build -f .\Dockerfile --no-cache --build-arg SERVICE_NAME=users -t users:1.0 . 
+  displayName: 'Create Docker Image'
