--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "scripts": {
     "build": "nest build",
+    "build:users": "nest build users",
+    "build:gateway": "nest build gateway",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "dev": "./start-docker.sh .env.development.local",
     "dev:bash": "bash ./start-docker.sh .env.development.local",
