--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./apps/users/test/jest-e2e.json",
     "migrations:generate": "scripts/generate-migrations.sh",
     "migrate:dev": "dotenv -e .env.development.local -- prisma migrate dev --name init",
+    "migrate:local": "scripts/migrate-local.sh",
     "migrate:prod": "dotenv -e .env -- prisma migrate deploy",
     "seed:dev": "scripts/seed-prisma.sh",
     "prisma:generate": "prisma generate"
