--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,10 @@ name: Build Docker Image
 on: workflow_dispatch
 
 jobs:
-  test-and-build:
+  build_docker:
+    strategy:
+      matrix:
+        service: ['gateway', 'users']
     runs-on: ubuntu-latest
 
     steps:
@@ -16,13 +19,10 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test -- --passWithNoTests
-
-      - name: Compilation check
-        run: npx tsc --noEmit
+        run: npm install
 
       - name: Build the project
         run: npm run build
+
+      - name: Build Docker Image
+        run: docker build --no-cache --build-arg SERVICE_NAME=${{ matrix.service }} -t novaenglishby.azurecr.io/${{ matrix.service }}:${{ github.sha }} .
