--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build the project
-        run: npm run build
+        run: npm run build ${{ matrix.service }}
 
       - name: Build Docker Image
         run: docker build --no-cache --build-arg SERVICE_NAME=${{ matrix.service }} -t novaenglishby.azurecr.io/${{ matrix.service }}:${{ github.sha }} .
