Docker Build Image pipeline + small fixes (#18)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "build:users": "nest build users",
+    "build:gateway": "nest build gateway",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "dev": "sh scripts/start-docker.sh .env.development.local",
     "dev:cleanup": "scripts/cleanup-docker.sh .env.development.local",
