--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,9 +30,9 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build --no-cache --build-arg SERVICE_NAME=${{ matrix.service }} -t ${{ secrets.REGISTRY_URL }}/${{ matrix.service }}:${{ env.branch }}-${{ github.sha }} .
+          docker build --no-cache --build-arg SERVICE_NAME=${{ matrix.service }} -t ${{ secrets.REGISTRY_URL }}/${{ matrix.service }}:${{ env.branch }}-${GITHUB_SHA::7} .
 
       - name: Push Docker images
         run: |
           echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ secrets.REGISTRY_URL }} --username ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-          docker push ${{ secrets.REGISTRY_URL }}/${{ matrix.service }}:${{ env.branch }}-${{ github.sha }}
+          docker push ${{ secrets.REGISTRY_URL }}/${{ matrix.service }}:${{ env.branch }}-${GITHUB_SHA::7}
