--- a/IaC/dev-service/registry/registry.yml
+++ b/IaC/dev-service/registry/registry.yml
@@ -64,6 +64,12 @@ kind: Ingress
 metadata:
   name: registry-ingress
   namespace: registry
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.org/client-max-body-size: "0"
+    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
+    nginx.org/proxy-connect-timeout: 600s
+    nginx.org/proxy-read-timeout: 600s
 spec:
   tls:
   - hosts:
