--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - local
     depends_on:
       - database
+      - rabbitmq
   users:
     container_name: users
     env_file:
@@ -41,6 +42,7 @@ services:
       - local
     depends_on:
       - database
+      - rabbitmq
   database:
     container_name: database
     restart: always
@@ -54,6 +56,17 @@ services:
       retries: 5
     ports:
       - "${DATABASE_PORT}:${DATABASE_PORT}"
+    networks:
+      - local
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:3-management
+    ports:
+      - "${RABBITMQ_PORT}:${RABBITMQ_PORT}"  
+      - "${RABBITMQ_MC_PORT}:${RABBITMQ_MC_PORT}" 
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
     networks:
       - local
 volumes:
