Use referer to determine frontend redirect uri upon login
Signed-off-by: Ilya Kushlianski <kushliansky@gmail.com>

--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
       "ts"
     ],
     "rootDir": ".",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.(spec|test)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
