feat: add endpoints for curriculum microservice

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ GATEWAY_PORT=
 USERS_SERVICE_HOST=#should be the same as users service name in docker compose (`users`)
 USERS_SERVICE_PORT=
 
+CURRICULUM_SERVICE_HOST=#should be the same as users service name in docker compose (`curriculum`)
+CURRICULUM_SERVICE_PORT=3003
+
 # Google auth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
