--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,17 @@ NODE_ENV= # can also be development, production
 APP_DOMAIN= # sth like novaenglish.by
 
 # Service ports
-GATEWAY_HOST=#should be the same as gateway service name in docker compose (`gateway`)
-GATEWAY_PORT=
+GATEWAY_HOST=gateway
+GATEWAY_PORT=3000
 
-USERS_SERVICE_HOST=#should be the same as users service name in docker compose (`users`)
-USERS_SERVICE_PORT=
+USERS_SERVICE_HOST=users
+USERS_SERVICE_PORT=3001
+
+LEARNING_SERVICE_HOST=learning
+LEARNING_SERVICE_PORT=3002
+
+CURRICULUM_SERVICE_HOST=curriculum
+CURRICULUM_SERVICE_PORT=3003
 
 # Google auth
 GOOGLE_CLIENT_ID=
