feature: add versioning config

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ APP_ENV= # can also be qa1, qa2, prod, dev
 NODE_ENV= # can also be development, production
 APP_DOMAIN= # sth like novaenglish.by
 
+# API config
+DEFAULT_API_VERSION=1
+
 # Service ports
 GATEWAY_HOST=gateway
 GATEWAY_PORT=3000
