--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@casl/ability": "^6.7.1",
     "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
