--- a/.github/workflows/build-and-deploy-to-qa1.yml
+++ b/.github/workflows/build-and-deploy-to-qa1.yml
@@ -1,6 +1,17 @@
 name: Build project and deploy to qa2
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      BRANCH:
+        description: 'Branch to use'
+        required: true
+        default: 'main'
+        type: choice
+        options:
+        - main
+        - stage-qa1
+
 
 jobs:
   test-and-build:
@@ -9,6 +20,8 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.BRANCH }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
