--- a/.github/workflows/build-and-deploy-to-qa2.yml
+++ b/.github/workflows/build-and-deploy-to-qa2.yml
@@ -2,6 +2,14 @@ name: Build project and deploy to qa2
 
 on: workflow_dispatch
 
+permissions:
+  id-token: write
+  contents: write
+  checks: write
+  issues: write
+  packages: write
+  pull-requests: write
+
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
