RMQ implemented Transport changed to RMQ
Signed-off-by: Makarov Sergey <sgmakgg@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       database:
         condition: service_healthy
       rabbitmq:
-        condition: service_started
+        condition: service_healthy
 
   users:
     container_name: users
@@ -45,6 +45,8 @@ services:
       - local
     depends_on:
       database:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
 
   learning:
@@ -70,7 +72,7 @@ services:
       database:
         condition: service_healthy
       rabbitmq:
-        condition: service_started
+        condition: service_healthy
   database:
     container_name: database
     restart: always
@@ -88,15 +90,24 @@ services:
       - local
   rabbitmq:
     container_name: rabbitmq
-    image: rabbitmq:3-management
+    image: rabbitmq:4.0.1-management
+    env_file:
+      - ${ENV_FILE}
+    healthcheck:
+      test: "rabbitmq-diagnostics -q ping"
+      interval: 5s
+      timeout: 5s
+      retries: 5
     ports:
       - "${RABBITMQ_PORT}:${RABBITMQ_PORT}"
       - "${RABBITMQ_MC_PORT}:${RABBITMQ_MC_PORT}"
-    environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    volumes:
+      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     networks:
       - local
+    depends_on:
+      database:
+        condition: service_healthy
 
 volumes:
   database:
