--- a/.env.example
+++ b/.env.example
@@ -17,13 +17,10 @@ DEFAULT_API_VERSION=1
 GATEWAY_HOST=gateway
 GATEWAY_PORT=3000
 
-USERS_SERVICE_HOST=users
 USERS_SERVICE_PORT=3001
 
-LEARNING_SERVICE_HOST=learning
 LEARNING_SERVICE_PORT=3002
 
-CURRICULUM_SERVICE_HOST=curriculum
 CURRICULUM_SERVICE_PORT=3003
 
 # Google auth
@@ -37,3 +34,5 @@ RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 RABBITMQ_PORT=
 RABBITMQ_MC_PORT=
+RABBITMQ_HOST=
+RABBITMQ_URL=
