rabbitmq.conf updated
Signed-off-by: Makarov Sergey <sgmakgg@gmail.com>

--- a/rabbitmq.conf
+++ b/rabbitmq.conf
@@ -975,11 +975,11 @@ deprecated_features.permit.management_metrics_collection = true
 
 ## Logging to console (can be true or false)
 ##
-# log.console = false
+log.console = true
 
 ## Log level for console logging
 ##
-# log.console.level = info
+log.console.level = error
 
 ## Logging to the amq.rabbitmq.log exchange (can be true or false)
 ##
